35bc72f2-db8a-4bea-b481-ef8750f2afae

--- a/products.html
+++ b/products.html
@@ -67,7 +67,7 @@
 
 <style type="text/css">
 
-* { box-sizing: border-box; } body {margin: 0;}#i5fk03a{display:flex;justify-content:flex-end;width:100%;}#iqdw275{padding:10px;text-align:center;font-size:32px;font-weight:700;}#i5v6cgj{text-align:center;}#iv6urlf{margin:32px 0 0 0;}#i30k01o{color:black;height:246px;width:100%;}#iutzdn3{padding:10px;font-size:24px;font-weight:600;}#ipcgkxj{padding:10px;}#iu9fqlf{margin:32px 0 0 0;}#i4xhhvr{color:black;width:100%;height:220px;}#i7493r7{padding:10px;font-weight:600;}#iz3oljd{padding:10px;}#ix4tqlk{color:black;width:100%;height:220px;}#i39ttyy{padding:10px;font-weight:600;}#ioj6dch{padding:10px;}#i50dzxl{color:black;width:100%;height:220px;}#ihk548s{padding:10px;font-weight:600;}#iet0iwl{padding:10px;}#ia49paj{color:black;height:246px;width:100%;}#imfc60c{padding:10px;font-size:24px;font-weight:600;}#if1pv8t{padding:10px;}#ia9i6mp{margin:32px 0 0 0;}#igf65q7{margin:32px 0 0 0;}#iult555{width:100%;height:100%;}
+* { box-sizing: border-box; } body {margin: 0;}#i5fk03a{display:flex;justify-content:flex-end;width:100%;}#iqdw275{padding:10px;text-align:center;font-size:32px;font-weight:700;}#i5v6cgj{text-align:center;}#iv6urlf{margin:32px 0 0 0;}#i30k01o{color:black;height:246px;width:100%;}#iutzdn3{padding:10px;font-size:24px;font-weight:600;}#ipcgkxj{padding:10px;}#iu9fqlf{margin:32px 0 0 0;}#i4xhhvr{color:black;width:100%;height:220px;}#i7493r7{padding:10px;font-weight:600;}#ia49paj{color:black;height:246px;width:100%;}#imfc60c{padding:10px;font-size:24px;font-weight:600;}#if1pv8t{padding:10px;}#ia9i6mp{margin:32px 0 0 0;}#igf65q7{margin:32px 0 0 0;}#iult555{width:100%;height:100%;}#imffmdu{border-radius:10px 10px 10px 10px;border:0.5px solid #969696;}#i76k9f6{color:black;width:100%;height:220px;}#i11llho{padding:10px;font-weight:600;}#i2gr0wn{border-radius:10px 10px 10px 10px;border:0.5px solid #969696;}#iicsgry{color:black;width:100%;height:220px;}#iyyhk0k{padding:10px;font-weight:600;}#itlfd04{border-radius:10px 10px 10px 10px;border:0.5px solid #969696;}#ifc50u2{text-align:center;font-size:24px;font-weight:600;}
 
 </style>
 
@@ -142,32 +142,45 @@
    </div>
   </div>
   <div class="container-fluid" id="iu9fqlf">
-   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-3" id="ift3qcl">
-    <div class="col" id="iitszma">
-     <img id="i4xhhvr" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/22-1000x1000.jpg">
-     <div id="i7493r7">
-      DC LED&nbsp;
-     </div>
-     <div id="iz3oljd">
-      Here goes the description
+   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1">
+    <div class="col">
+     <div id="ifc50u2">
+      Have a look on popular products
      </div>
     </div>
-    <div class="col" id="inwtvjx">
-     <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/Solar-Hot-Water-Heater-Evacuated-Tube-Solar-Water-Heating-System-for-Solar-Water-Heater.jpg" id="i50dzxl">
-     <div id="ihk548s">
-      DC LED&nbsp;
-     </div>
-     <div id="iet0iwl">
-      Here goes the description
+   </div>
+   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-3">
+    <div class="col" id="ielcq95">
+     <div class="col" id="imffmdu">
+      <img id="i4xhhvr" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/22-1000x1000.jpg">
+      <div id="i7493r7">
+       DC LED&nbsp;
+      </div>
+      <div id="iz3oljd">
+       Here goes the description
+      </div>
      </div>
     </div>
-    <div class="col" id="i9lr6p6">
-     <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/solar-led-street-lamp-500x500.jpg" id="ix4tqlk">
-     <div id="i39ttyy">
-      DC LED&nbsp;
+    <div class="col" id="id3c9cc">
+     <div class="col" id="itlfd04">
+      <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/Solar-Hot-Water-Heater-Evacuated-Tube-Solar-Water-Heating-System-for-Solar-Water-Heater.jpg" id="iicsgry">
+      <div id="iyyhk0k">
+       DC LED&nbsp;
+      </div>
+      <div id="i5978hq">
+       Here goes the description
+      </div>
      </div>
-     <div id="ioj6dch">
-      Here goes the description
+    </div>
+    <div class="col" id="i88jp2e">
+     <div class="col" id="i2gr0wn">
+      <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/solar-led-street-lamp-500x500.jpg" id="i76k9f6">
+      <div id="i11llho">
+       DC LED&nbsp;
+      </div>
+      <div id="ih88507">
+       Here goes the description
+      </div>
      </div>
     </div>
    </div>
