--- a/contact-us.html
+++ b/contact-us.html
@@ -86,10 +86,12 @@
        </div>
        <div id="collapse-e7c7ecb1-769b-4512-b6e4-2112631c2dea" class="collapse navbar-collapse">
         <ul id="io78vh" class="navbar-nav me-auto mb-2 mb-lg-0">
-         <li class="nav-item"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" id="ivhyky" class="nav-link active">Home</a></li>
+         <li class="nav-item"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" id="ivhyky" class="nav-link">Home</a></li>
          <li id="if903w" class="nav-item"><a page="page://Fsz6ThtqsC3LvLnu3" name="About Us" slug="about-us" href="//webpage-webbuildershopiana.vercel.app/about-us.html" link-type="page" id="igrwv5" class="nav-link">About Us</a></li>
-         <li id="it57ri" class="nav-item"><a page="page://sqMvZMlEXxEQUI0Axj" name="Contact Us" slug="contact-us" href="//webpage-webbuildershopiana.vercel.app/contact-us.html" link-type="page" id="i7q1ue" class="nav-link">Contact Us</a></li>
-         <li class="nav-item dropdown"><a href="#" id="navbarDropdown-3" role="button" data-bs-toggle="dropdown" aria-expanded="false" class="nav-link dropdown-toggle">Products &amp; Services</a>
+         <li id="it57ri" class="nav-item"><a page="page://sqMvZMlEXxEQUI0Axj" name="Contact Us" slug="contact-us" href="//webpage-webbuildershopiana.vercel.app/contact-us.html" link-type="page" id="i7q1ue" class="nav-link active">Contact Us</a></li>
+         <li class="nav-item" id="i3ozkjb"><a page="page://vfGM39CArM9iPE3lSp2ES" name="Products" slug="products" href="//webpage-webbuildershopiana.vercel.app/products.html" link-type="page" class="nav-link" id="ipzu3h4">Products</a></li>
+         <li class="nav-item" id="iu5n5qn"><a page="page://AHft5gGWMWiGQP5fJZ4CD5" name="Projects" slug="projects" href="//webpage-webbuildershopiana.vercel.app/projects.html" link-type="page" class="nav-link" id="i9b9blx">Projects</a></li>
+         <li class="nav-item dropdown"><a href="#" id="navbarDropdown-3" role="button" data-bs-toggle="dropdown" aria-expanded="false" class="nav-link dropdown-toggle">Services</a>
           <ul aria-labelledby="navbarDropdown" id="irc4ec" class="dropdown-menu">
            <li><a href="#" id="i9ius6" class="dropdown-item">O&amp;M</a></li>
            <li><a href="#" id="ixp1xu" class="dropdown-item">Installation</a><a href="#" id="iffm0g" class="dropdown-item">Module Cleaning</a></li>
