--- a/contact-us.html
+++ b/contact-us.html
@@ -93,8 +93,8 @@
          <li class="nav-item" id="iu5n5qn"><a page="page://AHft5gGWMWiGQP5fJZ4CD5" name="Projects" slug="projects" href="//webpage-webbuildershopiana.vercel.app/projects.html" link-type="page" class="nav-link" id="i9b9blx">Projects</a></li>
          <li class="nav-item dropdown"><a href="#" id="navbarDropdown-3" role="button" data-bs-toggle="dropdown" aria-expanded="false" class="nav-link dropdown-toggle">Services</a>
           <ul aria-labelledby="navbarDropdown" id="irc4ec" class="dropdown-menu">
-           <li><a href="#" id="i9ius6" class="dropdown-item">O&amp;M</a></li>
-           <li><a href="#" id="ixp1xu" class="dropdown-item">Installation</a><a href="#" id="iffm0g" class="dropdown-item">Module Cleaning</a></li>
+           <li><a page="page://qEXAlJ4GtdjBe9orZSq" name="O&amp;M" slug="o&amp;m" href="//webpage-webbuildershopiana.vercel.app/o&amp;m.html" link-type="page" id="i9ius6" class="dropdown-item">O&amp;M</a></li>
+           <li><a href="#" id="ixp1xu" class="dropdown-item">Installation</a><a page="page://ynuEQgnOFQNGGFKHRipn" name="Module Cleaning" slug="module-cleaning" href="//webpage-webbuildershopiana.vercel.app/module-cleaning.html" link-type="page" id="iffm0g" class="dropdown-item">Module Cleaning</a></li>
            <li></li>
            <li></li>
           </ul></li>
