--- a/o&m.html
+++ b/o&m.html
@@ -86,13 +86,15 @@
        </div>
        <div id="collapse-44e93e40-3c32-4bfd-bb8d-6e38d5f54344" class="collapse navbar-collapse">
         <ul id="ifgnai" class="navbar-nav me-auto mb-2 mb-lg-0">
-         <li class="nav-item"><a aria-current="page" href="#" id="im9g9s" class="nav-link">Home</a></li>
-         <li id="ijtcvt" class="nav-item"><a href="#" id="ifbb1o" class="nav-link">About Us</a></li>
-         <li id="iozgzx" class="nav-item"><a href="#" id="i82uj1" class="nav-link">Contact Us</a></li>
-         <li class="nav-item dropdown"><a href="#" id="navbarDropdown-4" role="button" data-bs-toggle="dropdown" aria-expanded="false" class="nav-link dropdown-toggle active">Products &amp; Services</a>
+         <li class="nav-item"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" id="im9g9s" class="nav-link">Home</a></li>
+         <li id="ijtcvt" class="nav-item"><a page="page://Fsz6ThtqsC3LvLnu3" name="About Us" slug="about-us" href="//webpage-webbuildershopiana.vercel.app/about-us.html" link-type="page" id="ifbb1o" class="nav-link">About Us</a></li>
+         <li id="iozgzx" class="nav-item"><a page="page://sqMvZMlEXxEQUI0Axj" name="Contact Us" slug="contact-us" href="//webpage-webbuildershopiana.vercel.app/contact-us.html" link-type="page" id="i82uj1" class="nav-link">Contact Us</a></li>
+         <li class="nav-item" id="iav62cj"><a page="page://vfGM39CArM9iPE3lSp2ES" name="Products" slug="products" href="//webpage-webbuildershopiana.vercel.app/products.html" link-type="page" class="nav-link" id="i5g3gql">Products</a></li>
+         <li class="nav-item" id="i546mr7"><a page="page://AHft5gGWMWiGQP5fJZ4CD5" name="Projects" slug="projects" href="//webpage-webbuildershopiana.vercel.app/projects.html" link-type="page" class="nav-link" id="i9vbzxj">Projects</a></li>
+         <li class="nav-item dropdown"><a href="#" id="navbarDropdown-4" role="button" data-bs-toggle="dropdown" aria-expanded="false" class="nav-link dropdown-toggle active">Services</a>
           <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
            <li><a page="page://qEXAlJ4GtdjBe9orZSq" name="O&amp;M" slug="o&amp;m" href="//webpage-webbuildershopiana.vercel.app/o&amp;m.html" link-type="page" id="ivkigi" class="dropdown-item">O&amp;M</a></li>
-           <li><a href="#" id="iw0klu" class="dropdown-item">Installation</a><a href="#" id="i54h1u" class="dropdown-item">Module Cleaning</a></li>
+           <li><a href="#" id="iw0klu" class="dropdown-item">Installation</a><a page="page://ynuEQgnOFQNGGFKHRipn" name="Module Cleaning" slug="module-cleaning" href="//webpage-webbuildershopiana.vercel.app/module-cleaning.html" link-type="page" id="i54h1u" class="dropdown-item">Module Cleaning</a></li>
            <li></li>
            <li></li>
           </ul></li>
