--- a/products.html
+++ b/products.html
@@ -86,14 +86,15 @@
        </div>
        <div id="collapse-f863d1b5-839f-4e55-a40f-fb0cc27aaadc" class="collapse navbar-collapse">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="i5fk03a">
-         <li class="nav-item"><a aria-current="page" href="#" class="nav-link" id="iow7a2k">Home</a></li>
-         <li class="nav-item" id="i6iv65a"><a href="#" class="nav-link" id="i1kpf0g">About Us</a></li>
-         <li class="nav-item" id="inwwinm"><a href="#" class="nav-link" id="id8b2tw">Contact Us</a></li>
-         <li class="nav-item" id="isbqj5a"><a href="#" class="nav-link active" id="iet3r8o">Products</a></li>
+         <li class="nav-item"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" class="nav-link" id="iow7a2k">Home</a></li>
+         <li class="nav-item" id="i6iv65a"><a page="page://Fsz6ThtqsC3LvLnu3" name="About Us" slug="about-us" href="//webpage-webbuildershopiana.vercel.app/about-us.html" link-type="page" class="nav-link" id="i1kpf0g">About Us</a></li>
+         <li class="nav-item" id="inwwinm"><a page="page://sqMvZMlEXxEQUI0Axj" name="Contact Us" slug="contact-us" href="//webpage-webbuildershopiana.vercel.app/contact-us.html" link-type="page" class="nav-link" id="id8b2tw">Contact Us</a></li>
+         <li class="nav-item" id="isbqj5a"><a page="page://vfGM39CArM9iPE3lSp2ES" name="Products" slug="products" href="//webpage-webbuildershopiana.vercel.app/products.html" link-type="page" class="nav-link active" id="iet3r8o">Products</a></li>
+         <li class="nav-item" id="ih49wtw"><a page="page://AHft5gGWMWiGQP5fJZ4CD5" name="Projects" slug="projects" href="//webpage-webbuildershopiana.vercel.app/projects.html" link-type="page" class="nav-link" id="iphuf5g">Projects</a></li>
          <li class="nav-item dropdown"><a href="#" id="navbarDropdown-6" role="button" data-bs-toggle="dropdown" aria-expanded="false" class="nav-link dropdown-toggle">Services</a>
           <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
-           <li><a href="#" class="dropdown-item" id="ibqz9ww">O&amp;M</a></li>
-           <li><a href="#" class="dropdown-item" id="i23xums">Installation</a><a href="#" class="dropdown-item" id="i9pghib">Module Cleaning</a></li>
+           <li><a page="page://qEXAlJ4GtdjBe9orZSq" name="O&amp;M" slug="o&amp;m" href="//webpage-webbuildershopiana.vercel.app/o&amp;m.html" link-type="page" class="dropdown-item" id="ibqz9ww">O&amp;M</a></li>
+           <li><a href="#" class="dropdown-item" id="i23xums">Installation</a><a page="page://ynuEQgnOFQNGGFKHRipn" name="Module Cleaning" slug="module-cleaning" href="//webpage-webbuildershopiana.vercel.app/module-cleaning.html" link-type="page" class="dropdown-item" id="i9pghib">Module Cleaning</a></li>
            <li></li>
            <li></li>
           </ul></li>
