--- a/projects.html
+++ b/projects.html
@@ -89,8 +89,8 @@
          <li class="nav-item"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" class="nav-link" id="ifdrgil">Home</a></li>
          <li class="nav-item" id="ivs5m86"><a page="page://Fsz6ThtqsC3LvLnu3" name="About Us" slug="about-us" href="//webpage-webbuildershopiana.vercel.app/about-us.html" link-type="page" class="nav-link" id="iorpmie">About Us</a></li>
          <li class="nav-item" id="i9hzzji"><a page="page://sqMvZMlEXxEQUI0Axj" name="Contact Us" slug="contact-us" href="//webpage-webbuildershopiana.vercel.app/contact-us.html" link-type="page" class="nav-link" id="i2f730i">Contact Us</a></li>
-         <li class="nav-item" id="ibfmiu3"><a page="page://vfGM39CArM9iPE3lSp2ES" name="Products" slug="products" href="//webpage-webbuildershopiana.vercel.app/products.html" link-type="page" class="nav-link active" id="ilqp6on">Products</a></li>
-         <li class="nav-item" id="il02bv8"><a page="page://AHft5gGWMWiGQP5fJZ4CD5" name="Projects" slug="projects" href="//webpage-webbuildershopiana.vercel.app/projects.html" link-type="page" class="nav-link" id="ioiu1cu">Projects</a></li>
+         <li class="nav-item" id="ibfmiu3"><a page="page://vfGM39CArM9iPE3lSp2ES" name="Products" slug="products" href="//webpage-webbuildershopiana.vercel.app/products.html" link-type="page" class="nav-link" id="ilqp6on">Products</a></li>
+         <li class="nav-item" id="il02bv8"><a page="page://AHft5gGWMWiGQP5fJZ4CD5" name="Projects" slug="projects" href="//webpage-webbuildershopiana.vercel.app/projects.html" link-type="page" class="nav-link active" id="ioiu1cu">Projects</a></li>
          <li class="nav-item dropdown"><a href="#" id="navbarDropdown-7" role="button" data-bs-toggle="dropdown" aria-expanded="false" class="nav-link dropdown-toggle">Services</a>
           <ul aria-labelledby="navbarDropdown" class="dropdown-menu" id="ioxjxei">
            <li><a page="page://qEXAlJ4GtdjBe9orZSq" name="O&amp;M" slug="o&amp;m" href="//webpage-webbuildershopiana.vercel.app/o&amp;m.html" link-type="page" class="dropdown-item" id="ig1cr5q">O&amp;M</a></li>
