--- a/projects.html
+++ b/projects.html
@@ -75,32 +75,32 @@
 		<html>
  <head></head>
  <body id="in3lu4v">
-  <div class="container-fluid" id="ijwqfuo">
-   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1" id="ir084t4">
-    <div class="col" id="i6smpz7">
-     <nav class="navbar navbar-expand-lg navbar-light border" id="i78hucu">
+  <div id="ijwqfuo" class="container-fluid">
+   <div id="ir084t4" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1">
+    <div id="i6smpz7" class="col">
+     <nav id="i78hucu" class="navbar navbar-expand-lg navbar-light border">
       <div class="container-fluid">
        <a href="#" class="navbar-brand">Navbar</a>
        <div id="toggle-5479098a-a1bd-4021-b1d4-c91a50cbf7e4" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-5479098a-a1bd-4021-b1d4-c91a50cbf7e4" aria-controls="collapse-5479098a-a1bd-4021-b1d4-c91a50cbf7e4" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler">
         <span class="navbar-toggler-icon"></span>
        </div>
        <div id="collapse-5479098a-a1bd-4021-b1d4-c91a50cbf7e4" class="collapse navbar-collapse">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="ij7s5jg">
-         <li class="nav-item"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" class="nav-link" id="ifdrgil">Home</a></li>
-         <li class="nav-item" id="ivs5m86"><a page="page://Fsz6ThtqsC3LvLnu3" name="About Us" slug="about-us" href="//webpage-webbuildershopiana.vercel.app/about-us.html" link-type="page" class="nav-link" id="iorpmie">About Us</a></li>
-         <li class="nav-item" id="i9hzzji"><a page="page://sqMvZMlEXxEQUI0Axj" name="Contact Us" slug="contact-us" href="//webpage-webbuildershopiana.vercel.app/contact-us.html" link-type="page" class="nav-link" id="i2f730i">Contact Us</a></li>
-         <li class="nav-item" id="ibfmiu3"><a page="page://vfGM39CArM9iPE3lSp2ES" name="Products" slug="products" href="//webpage-webbuildershopiana.vercel.app/products.html" link-type="page" class="nav-link" id="ilqp6on">Products</a></li>
-         <li class="nav-item" id="il02bv8"><a page="page://AHft5gGWMWiGQP5fJZ4CD5" name="Projects" slug="projects" href="//webpage-webbuildershopiana.vercel.app/projects.html" link-type="page" class="nav-link active" id="ioiu1cu">Projects</a></li>
+        <ul id="ij7s5jg" class="navbar-nav me-auto mb-2 mb-lg-0">
+         <li class="nav-item"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" id="ifdrgil" class="nav-link">Home</a></li>
+         <li id="ivs5m86" class="nav-item"><a page="page://Fsz6ThtqsC3LvLnu3" name="About Us" slug="about-us" href="//webpage-webbuildershopiana.vercel.app/about-us.html" link-type="page" id="iorpmie" class="nav-link">About Us</a></li>
+         <li id="i9hzzji" class="nav-item"><a page="page://sqMvZMlEXxEQUI0Axj" name="Contact Us" slug="contact-us" href="//webpage-webbuildershopiana.vercel.app/contact-us.html" link-type="page" id="i2f730i" class="nav-link">Contact Us</a></li>
+         <li id="ibfmiu3" class="nav-item"><a page="page://vfGM39CArM9iPE3lSp2ES" name="Products" slug="products" href="//webpage-webbuildershopiana.vercel.app/products.html" link-type="page" id="ilqp6on" class="nav-link">Products</a></li>
+         <li id="il02bv8" class="nav-item"><a page="page://AHft5gGWMWiGQP5fJZ4CD5" name="Projects" slug="projects" href="//webpage-webbuildershopiana.vercel.app/projects.html" link-type="page" id="ioiu1cu" class="nav-link active">Projects</a></li>
          <li class="nav-item dropdown"><a href="#" id="navbarDropdown-7" role="button" data-bs-toggle="dropdown" aria-expanded="false" class="nav-link dropdown-toggle">Services</a>
-          <ul aria-labelledby="navbarDropdown" class="dropdown-menu" id="ioxjxei">
-           <li><a page="page://qEXAlJ4GtdjBe9orZSq" name="O&amp;M" slug="o&amp;m" href="//webpage-webbuildershopiana.vercel.app/o&amp;m.html" link-type="page" class="dropdown-item" id="ig1cr5q">O&amp;M</a></li>
-           <li><a href="#" class="dropdown-item" id="iku8hbc">Installation</a><a page="page://ynuEQgnOFQNGGFKHRipn" name="Module Cleaning" slug="module-cleaning" href="//webpage-webbuildershopiana.vercel.app/module-cleaning.html" link-type="page" class="dropdown-item" id="ii725nh">Module Cleaning</a></li>
+          <ul aria-labelledby="navbarDropdown" id="ioxjxei" class="dropdown-menu">
+           <li><a page="page://qEXAlJ4GtdjBe9orZSq" name="O&amp;M" slug="o&amp;m" href="//webpage-webbuildershopiana.vercel.app/o&amp;m.html" link-type="page" id="ig1cr5q" class="dropdown-item">O&amp;M</a></li>
+           <li><a href="#" id="iku8hbc" class="dropdown-item">Installation</a><a page="page://ynuEQgnOFQNGGFKHRipn" name="Module Cleaning" slug="module-cleaning" href="//webpage-webbuildershopiana.vercel.app/module-cleaning.html" link-type="page" id="ii725nh" class="dropdown-item">Module Cleaning</a></li>
            <li></li>
            <li></li>
           </ul></li>
         </ul>
         <form method="get" class="d-flex">
-         <input type="search" placeholder="Search" aria-label="Search" class="form-control me-2" id="i6peafs"><button type="submit" class="btn btn-outline-success">Search</button>
+         <input type="search" placeholder="Search" aria-label="Search" id="i6peafs" class="form-control me-2"><button type="submit" class="btn btn-outline-success">Search</button>
         </form>
        </div>
       </div>
@@ -108,28 +108,28 @@
     </div>
    </div>
   </div>
-  <div class="container-fluid" id="ik1w6oa">
-   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2" id="i8o5z7g">
-    <div class="col" id="insama3">
+  <div id="ik1w6oa" class="container-fluid">
+   <div id="i8o5z7g" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2">
+    <div id="insama3" class="col">
      <div id="i79lif3">
       WE CREATE UNIQUE &amp; EFFICIENT DIGITAL SOLUTION
      </div>
     </div>
-    <div class="col" id="ia2offo">
+    <div id="ia2offo" class="col">
      <div id="ib5smbx">
       <strong id="ibn2043">Lorem Ipsum</strong><span id="i6cap1t">&nbsp;is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</span>
      </div><button type="button" id="i5gddmk">Contact Us</button>
     </div>
    </div>
   </div>
-  <div class="container-fluid" id="i1vbnij">
-   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2" id="i6g39ml">
-    <div class="col" id="ikygwqi">
+  <div id="i1vbnij" class="container-fluid">
+   <div id="i6g39ml" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2">
+    <div id="ikygwqi" class="col">
      <img id="i5m0wff" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/Utility Project Large curtain-min_0.png">
     </div>
-    <div class="col" id="irbdxjl">
-     <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-3" id="iwziewi">
-      <div class="col" id="ipe4gc8">
+    <div id="irbdxjl" class="col">
+     <div id="iwziewi" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-3">
+      <div id="ipe4gc8" class="col">
        <div id="ieuwtjr">
         100+
        </div>
@@ -137,7 +137,7 @@
         Projects Completed
        </div>
       </div>
-      <div class="col" id="iek69ej">
+      <div id="iek69ej" class="col">
        <div id="i4efy2t">
         58+
        </div>
@@ -145,7 +145,7 @@
         Projects Completed
        </div>
       </div>
-      <div class="col" id="i4gmju3">
+      <div id="i4gmju3" class="col">
        <div id="i562xup">
         13+
        </div>
@@ -157,33 +157,33 @@
     </div>
    </div>
   </div>
-  <div class="container-fluid" id="i0ppjuu">
-   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1" id="iwn06sn">
+  <div id="i0ppjuu" class="container-fluid">
+   <div id="iwn06sn" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1">
     <div class="col">
      <div id="i4qj876">
       Our Project
      </div>
     </div>
    </div>
-   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-3" id="iwdsz7o">
-    <div class="col" id="i8ed05k">
-     <div class="col" id="ixa98fi">
+   <div id="iwdsz7o" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-3">
+    <div id="i8ed05k" class="col">
+     <div id="ixa98fi" class="col">
       <img id="ih8ol0z" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/EmbeddedImage (3).jpg">
       <div id="i9r4jfk">
        400 Kwp Rooftop MDSU Ajmer
       </div>
      </div>
     </div>
-    <div class="col" id="ijwg5es">
-     <div class="col" id="inouk3k">
+    <div id="ijwg5es" class="col">
+     <div id="inouk3k" class="col">
       <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/Solar-Hot-Water-Heater-Evacuated-Tube-Solar-Water-Heating-System-for-Solar-Water-Heater.jpg" id="ir8f4wu">
       <div id="is1nylo">
        400 Kwp Rooftop MDSU Ajmer
       </div>
      </div>
     </div>
-    <div class="col" id="iz3w36g">
-     <div class="col" id="it7999m">
+    <div id="iz3w36g" class="col">
+     <div id="it7999m" class="col">
       <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/EmbeddedImage (2).jpg" id="i9nc3u7">
       <div id="i30a92k">
        400 Kwp Rooftop MDSU Ajmer
@@ -191,25 +191,25 @@
      </div>
     </div>
    </div>
-   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-3" id="i7t53eq">
-    <div class="col" id="i3oi1u5">
-     <div class="col" id="iw0w4fg">
+   <div id="i7t53eq" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-3">
+    <div id="i3oi1u5" class="col">
+     <div id="iw0w4fg" class="col">
       <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/EmbeddedImage (3).jpg" id="ic7cagl">
       <div id="ixx83yw">
        400 Kwp Rooftop MDSU Ajmer
       </div>
      </div>
     </div>
-    <div class="col" id="i6n5hqh">
-     <div class="col" id="iqbjoil">
+    <div id="i6n5hqh" class="col">
+     <div id="iqbjoil" class="col">
       <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/Solar-Hot-Water-Heater-Evacuated-Tube-Solar-Water-Heating-System-for-Solar-Water-Heater.jpg" id="ia70upa">
       <div id="irncszh">
        400 Kwp Rooftop MDSU Ajmer
       </div>
      </div>
     </div>
-    <div class="col" id="ilkz6e9">
-     <div class="col" id="iujil2g">
+    <div id="ilkz6e9" class="col">
+     <div id="iujil2g" class="col">
       <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/EmbeddedImage (2).jpg" id="iejf2zg">
       <div id="iogx2gx">
        400 Kwp Rooftop MDSU Ajmer
@@ -218,9 +218,9 @@
     </div>
    </div>
   </div>
-  <div class="container" id="i8p67uo">
+  <div id="i8p67uo" class="container">
    <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2">
-    <footer class="text-center text-lg-start text-muted w-100" id="irke4mh">
+    <footer id="irke4mh" class="text-center text-lg-start text-muted w-100">
      <!-- Section: Social media -->
      <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
       <!-- Left -->
@@ -250,7 +250,7 @@
         <!-- Grid column -->
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
          <!-- Content -->
-         <h6 class="text-uppercase fw-bold mb-4" id="iw4r3no"><i class="fas fa-gem me-3"></i>d square solar services</h6>
+         <h6 id="iw4r3no" class="text-uppercase fw-bold mb-4"><i class="fas fa-gem me-3"></i>d square solar services</h6>
          <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
         </div><!-- Grid column --><!-- Grid column -->
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
