--- a/module-cleaning.html
+++ b/module-cleaning.html
@@ -89,8 +89,8 @@
          <li class="nav-item"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" id="ieurb5u" class="nav-link">Home</a></li>
          <li id="ikjl5cg" class="nav-item"><a page="page://Fsz6ThtqsC3LvLnu3" name="About Us" slug="about-us" href="//webpage-webbuildershopiana.vercel.app/about-us.html" link-type="page" id="ivfc946" class="nav-link">About Us</a></li>
          <li id="ivanz1m" class="nav-item"><a page="page://sqMvZMlEXxEQUI0Axj" name="Contact Us" slug="contact-us" href="//webpage-webbuildershopiana.vercel.app/contact-us.html" link-type="page" id="i0j606j" class="nav-link">Contact Us</a></li>
-         <li class="nav-item" id="iqe24ju"><a page="page://vfGM39CArM9iPE3lSp2ES" name="Products" slug="products" href="//webpage-webbuildershopiana.vercel.app/products.html" link-type="page" class="nav-link" id="i2dw2pk">Products</a></li>
-         <li class="nav-item" id="i1e23dh"><a page="page://AHft5gGWMWiGQP5fJZ4CD5" name="Projects" slug="projects" href="//webpage-webbuildershopiana.vercel.app/projects.html" link-type="page" class="nav-link" id="io44lz9">Projects</a></li>
+         <li id="iqe24ju" class="nav-item"><a page="page://vfGM39CArM9iPE3lSp2ES" name="Products" slug="products" href="//webpage-webbuildershopiana.vercel.app/products.html" link-type="page" id="i2dw2pk" class="nav-link">Products</a></li>
+         <li id="i1e23dh" class="nav-item"><a page="page://AHft5gGWMWiGQP5fJZ4CD5" name="Projects" slug="projects" href="//webpage-webbuildershopiana.vercel.app/projects.html" link-type="page" id="io44lz9" class="nav-link">Projects</a></li>
          <li class="nav-item dropdown"><a href="#" id="navbarDropdown-5" role="button" data-bs-toggle="dropdown" aria-expanded="false" class="nav-link dropdown-toggle active">Services</a>
           <ul aria-labelledby="navbarDropdown" id="i4a2y6l" class="dropdown-menu">
            <li><a page="page://qEXAlJ4GtdjBe9orZSq" name="O&amp;M" slug="o&amp;m" href="//webpage-webbuildershopiana.vercel.app/o&amp;m.html" link-type="page" id="igast0e" class="dropdown-item">O&amp;M</a></li>
