--- a/products.html
+++ b/products.html
@@ -75,26 +75,26 @@
 		<html>
  <head></head>
  <body id="ieeh728">
-  <div class="container-fluid" id="iijurwl">
-   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1" id="iprlr4m">
-    <div class="col" id="iczb22f">
-     <nav class="navbar navbar-expand-lg navbar-light border" id="ik2gt68">
+  <div id="iijurwl" class="container-fluid">
+   <div id="iprlr4m" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1">
+    <div id="iczb22f" class="col">
+     <nav id="ik2gt68" class="navbar navbar-expand-lg navbar-light border">
       <div class="container-fluid">
        <a href="#" class="navbar-brand">Navbar</a>
        <div id="toggle-f863d1b5-839f-4e55-a40f-fb0cc27aaadc" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-f863d1b5-839f-4e55-a40f-fb0cc27aaadc" aria-controls="collapse-f863d1b5-839f-4e55-a40f-fb0cc27aaadc" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler">
         <span class="navbar-toggler-icon"></span>
        </div>
        <div id="collapse-f863d1b5-839f-4e55-a40f-fb0cc27aaadc" class="collapse navbar-collapse">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="i5fk03a">
-         <li class="nav-item"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" class="nav-link" id="iow7a2k">Home</a></li>
-         <li class="nav-item" id="i6iv65a"><a page="page://Fsz6ThtqsC3LvLnu3" name="About Us" slug="about-us" href="//webpage-webbuildershopiana.vercel.app/about-us.html" link-type="page" class="nav-link" id="i1kpf0g">About Us</a></li>
-         <li class="nav-item" id="inwwinm"><a page="page://sqMvZMlEXxEQUI0Axj" name="Contact Us" slug="contact-us" href="//webpage-webbuildershopiana.vercel.app/contact-us.html" link-type="page" class="nav-link" id="id8b2tw">Contact Us</a></li>
-         <li class="nav-item" id="isbqj5a"><a page="page://vfGM39CArM9iPE3lSp2ES" name="Products" slug="products" href="//webpage-webbuildershopiana.vercel.app/products.html" link-type="page" class="nav-link active" id="iet3r8o">Products</a></li>
-         <li class="nav-item" id="ih49wtw"><a page="page://AHft5gGWMWiGQP5fJZ4CD5" name="Projects" slug="projects" href="//webpage-webbuildershopiana.vercel.app/projects.html" link-type="page" class="nav-link" id="iphuf5g">Projects</a></li>
+        <ul id="i5fk03a" class="navbar-nav me-auto mb-2 mb-lg-0">
+         <li class="nav-item"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" id="iow7a2k" class="nav-link">Home</a></li>
+         <li id="i6iv65a" class="nav-item"><a page="page://Fsz6ThtqsC3LvLnu3" name="About Us" slug="about-us" href="//webpage-webbuildershopiana.vercel.app/about-us.html" link-type="page" id="i1kpf0g" class="nav-link">About Us</a></li>
+         <li id="inwwinm" class="nav-item"><a page="page://sqMvZMlEXxEQUI0Axj" name="Contact Us" slug="contact-us" href="//webpage-webbuildershopiana.vercel.app/contact-us.html" link-type="page" id="id8b2tw" class="nav-link">Contact Us</a></li>
+         <li id="isbqj5a" class="nav-item"><a page="page://vfGM39CArM9iPE3lSp2ES" name="Products" slug="products" href="//webpage-webbuildershopiana.vercel.app/products.html" link-type="page" id="iet3r8o" class="nav-link active">Products</a></li>
+         <li id="ih49wtw" class="nav-item"><a page="page://AHft5gGWMWiGQP5fJZ4CD5" name="Projects" slug="projects" href="//webpage-webbuildershopiana.vercel.app/projects.html" link-type="page" id="iphuf5g" class="nav-link">Projects</a></li>
          <li class="nav-item dropdown"><a href="#" id="navbarDropdown-6" role="button" data-bs-toggle="dropdown" aria-expanded="false" class="nav-link dropdown-toggle">Services</a>
           <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
-           <li><a page="page://qEXAlJ4GtdjBe9orZSq" name="O&amp;M" slug="o&amp;m" href="//webpage-webbuildershopiana.vercel.app/o&amp;m.html" link-type="page" class="dropdown-item" id="ibqz9ww">O&amp;M</a></li>
-           <li><a href="#" class="dropdown-item" id="i23xums">Installation</a><a page="page://ynuEQgnOFQNGGFKHRipn" name="Module Cleaning" slug="module-cleaning" href="//webpage-webbuildershopiana.vercel.app/module-cleaning.html" link-type="page" class="dropdown-item" id="i9pghib">Module Cleaning</a></li>
+           <li><a page="page://qEXAlJ4GtdjBe9orZSq" name="O&amp;M" slug="o&amp;m" href="//webpage-webbuildershopiana.vercel.app/o&amp;m.html" link-type="page" id="ibqz9ww" class="dropdown-item">O&amp;M</a></li>
+           <li><a href="#" id="i23xums" class="dropdown-item">Installation</a><a page="page://ynuEQgnOFQNGGFKHRipn" name="Module Cleaning" slug="module-cleaning" href="//webpage-webbuildershopiana.vercel.app/module-cleaning.html" link-type="page" id="i9pghib" class="dropdown-item">Module Cleaning</a></li>
            <li></li>
            <li></li>
           </ul></li>
@@ -108,7 +108,7 @@
     </div>
    </div>
   </div>
-  <div class="container-fluid" id="iopuclu">
+  <div id="iopuclu" class="container-fluid">
    <div class="row p-2">
     <div class="col">
      <div id="iqdw275">
@@ -120,12 +120,12 @@
     </div>
    </div>
   </div>
-  <div class="container" id="ilf5mbs">
-   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2" id="ia9i6mp">
-    <div class="col" id="i2e380f">
+  <div id="ilf5mbs" class="container">
+   <div id="ia9i6mp" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2">
+    <div id="i2e380f" class="col">
      <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/inversor-growatt-7000TL3-S_ml.jpg" id="ia49paj">
     </div>
-    <div class="col" id="irzn2ec">
+    <div id="irzn2ec" class="col">
      <div id="imfc60c">
       Solar String Inverter&nbsp;
      </div>
@@ -135,14 +135,14 @@
     </div>
    </div>
   </div>
-  <div class="container-fluid" id="ilyd3z2">
-   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1" id="izpfpmw">
-    <div class="col" id="i8aolg4">
+  <div id="ilyd3z2" class="container-fluid">
+   <div id="izpfpmw" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1">
+    <div id="i8aolg4" class="col">
      <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/Utility Project Large curtain-min_0.png" alt="..." id="iult555" class="img-fluid">
     </div>
    </div>
   </div>
-  <div class="container-fluid" id="iu9fqlf">
+  <div id="iu9fqlf" class="container-fluid">
    <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1">
     <div class="col">
      <div id="ifc50u2">
@@ -151,8 +151,8 @@
     </div>
    </div>
    <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-3">
-    <div class="col" id="ielcq95">
-     <div class="col" id="imffmdu">
+    <div id="ielcq95" class="col">
+     <div id="imffmdu" class="col">
       <img id="i4xhhvr" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/22-1000x1000.jpg">
       <div id="i7493r7">
        DC LED&nbsp;
@@ -162,8 +162,8 @@
       </div>
      </div>
     </div>
-    <div class="col" id="id3c9cc">
-     <div class="col" id="itlfd04">
+    <div id="id3c9cc" class="col">
+     <div id="itlfd04" class="col">
       <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/Solar-Hot-Water-Heater-Evacuated-Tube-Solar-Water-Heating-System-for-Solar-Water-Heater.jpg" id="iicsgry">
       <div id="iyyhk0k">
        DC LED&nbsp;
@@ -173,8 +173,8 @@
       </div>
      </div>
     </div>
-    <div class="col" id="i88jp2e">
-     <div class="col" id="i2gr0wn">
+    <div id="i88jp2e" class="col">
+     <div id="i2gr0wn" class="col">
       <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/solar-led-street-lamp-500x500.jpg" id="i76k9f6">
       <div id="i11llho">
        DC LED&nbsp;
@@ -186,9 +186,9 @@
     </div>
    </div>
   </div>
-  <div class="container" id="i04vk9a">
-   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2" id="iv6urlf">
-    <div class="col" id="ifsjxg6">
+  <div id="i04vk9a" class="container">
+   <div id="iv6urlf" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2">
+    <div id="ifsjxg6" class="col">
      <div id="iutzdn3">
       Solar String Inverter&nbsp;
      </div>
@@ -196,16 +196,16 @@
       Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
      </div>
     </div>
-    <div class="col" id="i0jq582">
+    <div id="i0jq582" class="col">
      <img id="i30k01o" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/inversor-growatt-7000TL3-S_ml.jpg">
     </div>
    </div>
   </div>
-  <div class="container" id="iwavgft">
-   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2" id="igf65q7">
-    <footer class="text-center text-lg-start text-muted w-100" id="i3w89uo">
+  <div id="iwavgft" class="container">
+   <div id="igf65q7" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2">
+    <footer id="i3w89uo" class="text-center text-lg-start text-muted w-100">
      <!-- Section: Social media -->
-     <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom" id="ist74zi">
+     <section id="ist74zi" class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
       <!-- Left -->
       <div class="me-5 d-none d-lg-block">
        <span>Get connected with us on social networks:</span>
@@ -233,7 +233,7 @@
         <!-- Grid column -->
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
          <!-- Content -->
-         <h6 class="text-uppercase fw-bold mb-4" id="i65dxvd"><i class="fas fa-gem me-3"></i>d square solar services</h6>
+         <h6 id="i65dxvd" class="text-uppercase fw-bold mb-4"><i class="fas fa-gem me-3"></i>d square solar services</h6>
          <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
         </div><!-- Grid column --><!-- Grid column -->
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
