86731483-1889-4085-ac31-de906ea34214

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
      <nav id="incx" class="navbar navbar-expand-lg navbar-light">
       <div id="i5nk" class="container-fluid">
        <div id="iu78z" class="col">
-        <img id="ie6s6" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/logo.png"><a href="#" id="iyxlg" class="navbar-brand">D Square Solar Services</a>
+        <img id="ie6s6" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/logo.png"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" id="iyxlg" class="navbar-brand">D Square Solar Services</a>
        </div>
        <div id="toggle-38e8d20e-76bf-4bd1-8116-b81fb5a10adb" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-38e8d20e-76bf-4bd1-8116-b81fb5a10adb" aria-controls="collapse-38e8d20e-76bf-4bd1-8116-b81fb5a10adb" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler">
         <span class="navbar-toggler-icon"></span>
