efc61888-1324-43ac-ab53-ba0358e56894

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <div id="ixh93" class="container-fluid">
    <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1" id="irufl3v">
     <div class="col" id="i8ex6yv">
-     <nav class="navbar navbar-expand-lg navbar-light border" id="i241bli">
+     <nav class="navbar navbar-expand-lg navbar-light" id="i241bli">
       <div class="container-fluid">
        <div id="toggle-87bf5f1e-6184-43eb-8050-7ba26e765b27" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-87bf5f1e-6184-43eb-8050-7ba26e765b27" aria-controls="collapse-87bf5f1e-6184-43eb-8050-7ba26e765b27" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler">
         <span class="navbar-toggler-icon" id="iq7r7xp"></span>
