--- a/products.html
+++ b/products.html
@@ -67,7 +67,7 @@
 
 <style type="text/css">
 
-* { box-sizing: border-box; } body {margin: 0;}#i5fk03a{display:flex;justify-content:flex-end;width:100%;}#iqdw275{padding:10px;text-align:center;font-size:32px;font-weight:700;}#i5v6cgj{text-align:center;}#iv6urlf{margin:32px 0 0 0;}#i30k01o{color:black;height:246px;width:100%;}#iutzdn3{padding:10px;font-size:24px;font-weight:600;}#ipcgkxj{padding:10px;}#iu9fqlf{margin:32px 0 0 0;}#i4xhhvr{color:black;width:100%;height:220px;}#i7493r7{padding:10px;font-weight:600;}#iz3oljd{padding:0 10px 10px 10px;}#ia49paj{color:black;height:246px;width:100%;}#imfc60c{padding:10px;font-size:24px;font-weight:600;}#if1pv8t{padding:10px;}#ia9i6mp{margin:32px 0 0 0;}#igf65q7{margin:32px 0 0 0;}#iult555{width:100%;height:100%;}#imffmdu{border-radius:10px 10px 10px 10px;border:0.5px solid #969696;}#i76k9f6{color:black;width:100%;height:220px;}#i11llho{padding:10px;font-weight:600;}#ih88507{padding:0px 10px 10px 10px;}#i2gr0wn{border-radius:10px 10px 10px 10px;border:0.5px solid #969696;}#iicsgry{color:black;width:100%;height:220px;}#iyyhk0k{padding:10px;font-weight:600;}#i5978hq{padding:0px 10px 10px 10px;}#itlfd04{border-radius:10px 10px 10px 10px;border:0.5px solid #969696;}#ifc50u2{text-align:center;font-size:24px;font-weight:600;}#iijurwl{padding:0px 0 0 0;}#iy1vadu{color:black;height:47.25px;}
+* { box-sizing: border-box; } body {margin: 0;}#i5fk03a{display:flex;justify-content:flex-end;width:100%;}#iqdw275{padding:10px;text-align:center;font-size:32px;font-weight:700;}#i5v6cgj{text-align:center;}#iv6urlf{margin:32px 0 0 0;}#i30k01o{color:black;height:246px;width:100%;}#iutzdn3{padding:10px;font-size:24px;font-weight:600;}#ipcgkxj{padding:10px;}#iu9fqlf{margin:32px 0 0 0;}#i4xhhvr{color:black;width:100%;height:220px;}#i7493r7{padding:10px;font-weight:600;}#iz3oljd{padding:0 10px 10px 10px;}#ia49paj{color:black;height:246px;width:100%;}#imfc60c{padding:10px;font-size:24px;font-weight:600;}#if1pv8t{padding:10px;}#ia9i6mp{margin:32px 0 0 0;}#igf65q7{margin:32px 0 0 0;}#iult555{width:100%;height:100%;}#imffmdu{border-radius:10px 10px 10px 10px;border:0.5px solid #969696;}#i76k9f6{color:black;width:100%;height:220px;}#i11llho{padding:10px;font-weight:600;}#ih88507{padding:0px 10px 10px 10px;}#i2gr0wn{border-radius:10px 10px 10px 10px;border:0.5px solid #969696;}#iicsgry{color:black;width:100%;height:220px;}#iyyhk0k{padding:10px;font-weight:600;}#i5978hq{padding:0px 10px 10px 10px;}#itlfd04{border-radius:10px 10px 10px 10px;border:0.5px solid #969696;}#ifc50u2{text-align:center;font-size:24px;font-weight:600;}
 
 </style>
 
@@ -78,16 +78,14 @@
   <div id="iijurwl" class="container-fluid">
    <div id="iprlr4m" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1">
     <div id="iczb22f" class="col">
-     <nav id="ik2gt68" class="navbar navbar-expand-lg navbar-light">
+     <nav id="ik2gt68" class="navbar navbar-expand-lg navbar-light border">
       <div class="container-fluid">
+       <a href="#" class="navbar-brand">Navbar</a>
        <div id="toggle-f863d1b5-839f-4e55-a40f-fb0cc27aaadc" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-f863d1b5-839f-4e55-a40f-fb0cc27aaadc" aria-controls="collapse-f863d1b5-839f-4e55-a40f-fb0cc27aaadc" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler">
         <span class="navbar-toggler-icon"></span>
        </div>
        <div id="collapse-f863d1b5-839f-4e55-a40f-fb0cc27aaadc" class="collapse navbar-collapse">
         <ul id="i5fk03a" class="navbar-nav me-auto mb-2 mb-lg-0">
-         <div class="col" id="i2k3ddo">
-          <img id="iy1vadu" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/logo.png"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" class="navbar-brand" id="iwqb1mf">D Square Solar Services</a>
-         </div>
          <li class="nav-item"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" id="iow7a2k" class="nav-link">Home</a></li>
          <li id="i6iv65a" class="nav-item"><a page="page://Fsz6ThtqsC3LvLnu3" name="About Us" slug="about-us" href="//webpage-webbuildershopiana.vercel.app/about-us.html" link-type="page" id="i1kpf0g" class="nav-link">About Us</a></li>
          <li id="inwwinm" class="nav-item"><a page="page://sqMvZMlEXxEQUI0Axj" name="Contact Us" slug="contact-us" href="//webpage-webbuildershopiana.vercel.app/contact-us.html" link-type="page" id="id8b2tw" class="nav-link">Contact Us</a></li>
