--- a/module-cleaning.html
+++ b/module-cleaning.html
@@ -67,7 +67,7 @@
 
 <style type="text/css">
 
-* { box-sizing: border-box; } body {margin: 0;}#iwog8f{padding:10px;text-align:center;font-size:32px;font-weight:700;}#ionu5i{padding:10px;text-align:center;font-size:16px;font-weight:700;}#iuos5j{padding:10px;text-align:center;}#ix59xq{color:rgb(33, 33, 33);font-family:"Open Sans", sans-serif;font-variant-ligatures:none;white-space-collapse:preserve;}#idntzl{padding:10px;text-align:center;font-weight:600;font-size:20px;}#inwz5d{color:black;width:100%;display:flex;justify-content:center;align-items:center;align-content:center;}#ilsj9j{padding:10px;text-align:center;font-weight:600;font-size:20px;}#ib1yok{color:black;width:100%;display:flex;justify-content:center;}#icmtdk{padding:10px;text-align:center;font-size:24px;font-weight:600;}#iwd7ly{padding:10px;text-align:center;border:0.5px solid #c4c4c4;border-radius:10px 10px 10px 10px;}#ih23d1{color:rgb(33, 33, 33);font-family:"Open Sans", sans-serif;font-variant-ligatures:none;white-space-collapse:preserve;}#ill9o7{color:rgb(33, 33, 33);font-family:"Open Sans", sans-serif;font-variant-ligatures:none;white-space-collapse:preserve;}#iz68ze{padding:10px;text-align:center;border:0.5px solid #c4c4c4;border-radius:10px 10px 10px 10px;}#iml3bo{padding:10px;text-align:center;border:0.5px solid #c4c4c4;border-radius:10px 10px 10px 10px;}#i5qdr05{width:100%;display:flex;justify-content:flex-end;}#igzhil{padding:0px 0 0 0;}#il5i8sd{color:black;height:47.25px;}
+* { box-sizing: border-box; } body {margin: 0;}#iwog8f{padding:10px;text-align:center;font-size:32px;font-weight:700;}#ionu5i{padding:10px;text-align:center;font-size:16px;font-weight:700;}#iuos5j{padding:10px;text-align:center;}#ix59xq{color:rgb(33, 33, 33);font-family:"Open Sans", sans-serif;font-variant-ligatures:none;white-space-collapse:preserve;}#idntzl{padding:10px;text-align:center;font-weight:600;font-size:20px;}#inwz5d{color:black;width:100%;display:flex;justify-content:center;align-items:center;align-content:center;}#ilsj9j{padding:10px;text-align:center;font-weight:600;font-size:20px;}#ib1yok{color:black;width:100%;display:flex;justify-content:center;}#icmtdk{padding:10px;text-align:center;font-size:24px;font-weight:600;}#iwd7ly{padding:10px;text-align:center;border:0.5px solid #c4c4c4;border-radius:10px 10px 10px 10px;}#ih23d1{color:rgb(33, 33, 33);font-family:"Open Sans", sans-serif;font-variant-ligatures:none;white-space-collapse:preserve;}#ill9o7{color:rgb(33, 33, 33);font-family:"Open Sans", sans-serif;font-variant-ligatures:none;white-space-collapse:preserve;}#iz68ze{padding:10px;text-align:center;border:0.5px solid #c4c4c4;border-radius:10px 10px 10px 10px;}#iml3bo{padding:10px;text-align:center;border:0.5px solid #c4c4c4;border-radius:10px 10px 10px 10px;}#i5qdr05{width:100%;display:flex;justify-content:flex-end;}
 
 </style>
 
@@ -76,24 +76,22 @@
  <head></head>
  <body id="ifn25l">
   <div id="igzhil" class="container-fluid">
-   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1" id="i0w62wj">
-    <div class="col" id="iucpapj">
-     <nav id="ilw2kj3" class="navbar navbar-expand-lg navbar-light">
-      <div class="container-fluid" id="iay628l">
+   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1">
+    <div class="col">
+     <nav id="ilw2kj3" class="navbar navbar-expand-lg navbar-light border">
+      <div class="container-fluid">
+       <a href="#" class="navbar-brand">Navbar</a>
        <div id="toggle-322336e6-da84-44ce-a430-daedbe929b40" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-322336e6-da84-44ce-a430-daedbe929b40" aria-controls="collapse-322336e6-da84-44ce-a430-daedbe929b40" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler">
         <span class="navbar-toggler-icon"></span>
        </div>
        <div id="collapse-322336e6-da84-44ce-a430-daedbe929b40" class="collapse navbar-collapse">
         <ul id="i5qdr05" class="navbar-nav me-auto mb-2 mb-lg-0">
-         <div class="col" id="i4w1wxy">
-          <img id="il5i8sd" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/logo.png"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" class="navbar-brand" id="iuk6ntq">D Square Solar Services</a>
-         </div>
          <li class="nav-item"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" id="ieurb5u" class="nav-link">Home</a></li>
          <li id="ikjl5cg" class="nav-item"><a page="page://Fsz6ThtqsC3LvLnu3" name="About Us" slug="about-us" href="//webpage-webbuildershopiana.vercel.app/about-us.html" link-type="page" id="ivfc946" class="nav-link">About Us</a></li>
          <li id="ivanz1m" class="nav-item"><a page="page://sqMvZMlEXxEQUI0Axj" name="Contact Us" slug="contact-us" href="//webpage-webbuildershopiana.vercel.app/contact-us.html" link-type="page" id="i0j606j" class="nav-link">Contact Us</a></li>
          <li id="iqe24ju" class="nav-item"><a page="page://vfGM39CArM9iPE3lSp2ES" name="Products" slug="products" href="//webpage-webbuildershopiana.vercel.app/products.html" link-type="page" id="i2dw2pk" class="nav-link">Products</a></li>
          <li id="i1e23dh" class="nav-item"><a page="page://AHft5gGWMWiGQP5fJZ4CD5" name="Projects" slug="projects" href="//webpage-webbuildershopiana.vercel.app/projects.html" link-type="page" id="io44lz9" class="nav-link">Projects</a></li>
-         <li class="nav-item dropdown" id="i1hqjlb"><a href="#" id="navbarDropdown-5" role="button" data-bs-toggle="dropdown" aria-expanded="false" class="nav-link dropdown-toggle active">Services</a>
+         <li class="nav-item dropdown"><a href="#" id="navbarDropdown-5" role="button" data-bs-toggle="dropdown" aria-expanded="false" class="nav-link dropdown-toggle active">Services</a>
           <ul aria-labelledby="navbarDropdown" id="i4a2y6l" class="dropdown-menu">
            <li><a page="page://qEXAlJ4GtdjBe9orZSq" name="O&amp;M" slug="o&amp;m" href="//webpage-webbuildershopiana.vercel.app/o&amp;m.html" link-type="page" id="igast0e" class="dropdown-item">O&amp;M</a></li>
            <li><a href="#" id="ibvt21r" class="dropdown-item">Installation</a><a page="page://ynuEQgnOFQNGGFKHRipn" name="Page 5" slug="page-5" href="//webpage-webbuildershopiana.vercel.app/page-5.html" link-type="page" id="izc348d" class="dropdown-item">Module Cleaning</a></li>
@@ -101,19 +99,19 @@
            <li></li>
           </ul></li>
         </ul>
-        <form method="get" class="d-flex" id="iqzyhwe">
-         <input type="search" placeholder="Search" aria-label="Search" class="form-control me-2"><button type="submit" class="btn btn-outline-success" id="iz2zlhv">Search</button>
+        <form method="get" class="d-flex">
+         <input type="search" placeholder="Search" aria-label="Search" class="form-control me-2"><button type="submit" class="btn btn-outline-success">Search</button>
         </form>
        </div>
       </div>
      </nav>
     </div>
    </div>
-  </div>
-  <div class="row p-2 row-cols-md-1" id="in95mqt">
-   <div class="col">
-    <div id="iwog8f">
-     Module Cleaning
+   <div class="row p-2">
+    <div class="col">
+     <div id="iwog8f">
+      Module Cleaning
+     </div>
     </div>
    </div>
   </div>
